fix swagger and endpoints
