# internal/handlers/request_handler.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"fmt"
 	"itam_auth/internal/database"
 	"itam_auth/internal/models"
 	"net/http"
@@ -128,6 +129,7 @@ func GetRequest(storage *database.Storage) gin.HandlerFunc {
 // @Param user_id query string true "User ID"
 // @Param limit query int false "Limit" default(10)
 // @Param offset query int false "Offset" default(0)
+// @Security BearerAuth
 // @Success 200 {object} map[string]interface{} "All requests"
 // @Failure 400 {object} map[string]string "Invalid user ID or pagination parameters"
 // @Failure 500 {object} map[string]string "Internal server error"
@@ -169,6 +171,7 @@ func GetAllRequests(storage *database.Storage) gin.HandlerFunc {
 // @Accept json
 // @Produce json
 // @Param request body handlers.UpdateRequestStatusRequest true "Request status update data"
+// @Security BearerAuth
 // @Success 200 {object} map[string]string "Success message"
 // @Failure 400 {object} map[string]string "Invalid request"
 // @Failure 500 {object} map[string]string "Internal server error"
@@ -193,5 +196,45 @@ func UpdateRequestStatus(storage *database.Storage) gin.HandlerFunc {
 		}
 
 		c.JSON(http.StatusOK, gin.H{"message": "update_request_status"})
+	}
+}
+
+// @Summary Удалить запрос
+// @Description Удаляет запрос по его ID
+// @Tags Requests
+// @Produce json
+// @Param request_id query string true "Request ID"
+// @Security BearerAuth
+// @Success 200 {object} map[string]string "Success message"
+// @Failure 400 {object} map[string]string "Invalid request ID"
+// @Failure 404 {object} map[string]string "Request not found"
+// @Failure 500 {object} map[string]string "Internal server error"
+// @Router /api/delete_request [delete]
+func DeleteRequest(storage *database.Storage) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		requestIDParam := c.Query("request_id")
+		if requestIDParam == "" {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Request ID is required"})
+			return
+		}
+
+		requestID, err := uuid.Parse(requestIDParam)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request ID"})
+			return
+		}
+
+		ctx := c.Request.Context()
+		err = storage.DeleteRequest(ctx, requestID)
+		if err != nil {
+			if err.Error() == fmt.Sprintf("no request found with ID: %s", requestID) {
+				c.JSON(http.StatusNotFound, gin.H{"error": "Request not found"})
+				return
+			}
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Error while deleting request", "details": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusOK, gin.H{"message": "Request deleted successfully"})
 	}
 }
